fix: update dependencies, bug in jiraApi

--- a/.env-example
+++ b/.env-example
@@ -3,8 +3,8 @@ REACT_APP_JIRA_USERNAME=
 REACT_APP_JIRA_PASSWORD=
 
 # URL Jira API
-JIRA_URL=https://jira.hh.ru
+REACT_APP_JIRA_URL=https://jira.hh.ru
 
 # Настройки прокси-сервера
-PROXY_PORT=3001
-PROXY_HOST=localhost
+REACT_APP_PROXY_PORT=3001
+REACT_APP_PROXY_HOST=localhost
