--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "@mui/icons-material": "^6.4.6",
     "@mui/material": "^6.4.6",
     "axios": "^1.7.2",
+    "css-select": "^5.1.0",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-proxy-middleware": "^3.0.0",
+    "nth-check": "^2.1.1",
     "postcss-preset-env": "^10.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "svgo": "^3.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,10 +48,15 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.8",
+    "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "postcss-flexbugs-fixes": "^5.0.2",
+    "resolve-url-loader": "^5.0.0",
+    "svgo": "^3.3.2",
     "tailwindcss": "^3.4.17"
+  },
+  "overrides": {
+    "svgo": "^3.3.2"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "postcss.config.js",
