feat(jira): add support for token-based authentication and update README

--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,8 @@
-# Учетные данные Jira
+# Учетные данные Jira (используйте ЛИБО логин/пароль, ЛИБО токен)
 REACT_APP_JIRA_USERNAME=
 REACT_APP_JIRA_PASSWORD=
+# ИЛИ
+REACT_APP_JIRA_TOKEN=
 
 # URL Jira API
 REACT_APP_JIRA_URL=https://jira.hh.ru
