feat(env): add JIRA project settings and depth configuration

--- a/.env-example
+++ b/.env-example
@@ -10,3 +10,8 @@ REACT_APP_JIRA_URL=https://jira.hh.ru
 # Настройки прокси-сервера
 REACT_APP_PROXY_PORT=3001
 REACT_APP_PROXY_HOST=localhost
+
+# Настройки поиска JIRA
+# REACT_APP_JIRA_PROJECTS - список проектов через запятую (если не указан, поиск будет по всем доступным проектам)
+REACT_APP_JIRA_PROJECTS="R&D :: Портфель проектов,R&D :: Мобильные приложения,R&D :: Development (HH),Маркетинг :: B2C,Design,R&D :: Blocker,DATA :: Analytics"
+REACT_APP_JIRA_DEPTH=2
